@@ -74,6 +74,8 @@
 	  - Applying a spellbook allows the player to flip through the pages,
 	      providing an indication of how many more times it can be read
 	  - Blessed charging identifies how many charges an item has (from AceHack)
+	  - When targeting a coordinate, you can press @ to move cursor to
+	      yourself. (from NAO, idea from b_jonas)
 
 	* bug fixes:
 	  - Fixed crash when player gets killed when entering a new level and
